# coffee_machine

./: .clang-format  .gitignore  CMakeLists.txt
src/: CoffeeCups.h  CoffeeDecorator.h  ConsoleInput.cc  ConsoleInput.h  EspressoDippoStrategy.cc  EspressoDippoStrategy.h  EspressoStrategy.cc  EspressoStrategy.h  FilteredCoffeeStrategy.cc  FilteredCoffeeStrategy.h  IBrewingStrategy.h  ICoffee.h  IInput.h  MilkCoffeeStrategy.cc  MilkCoffeeStrategy.h  MilkDecorator.h  SugarDecorator.h  SyrupDecorator.h  coffeemachine.cc  coffeemachine.h  console.cc  console.h  icoffeemachine.h  main.cc
tests/: coffee_tests.cc  mocks.h
